2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JApplet.java,
	libraries/javalib/javax/swing/JInternalFrame.java,
	libraries/javalib/javax/swing/JWindow.java:
	Resynced with GNU Classpath.

	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JFrame.java
	(setDefaultLookAndFeelDecorated): Removed wrong code again.
	* javax/swing/JInternalFrame.java
	(setDefaultCloseOperation): Fixed typo.

	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JApplet.java
	(HIDE_ON_CLOSE): Removed.
	(EXIT_ON_CLOSE): Likewise.
	(DISPOSE_ON_CLOSE): Likewise.
	(DO_NOTHING_ON_CLOSE): Likewise.
	(close_action): Likewise.
	(getDefaultCloseOperation): Likewise.
	(setDefaultCloseOperation): Likewise.
	(processWindowEvent): Likewise.
	(getPreferredSize): Simplified.
	* javax/swing/JDialog.java
	(setDefaultLookAndFeelDecorated): Throw exception on wrong argument
	value.
	* javax/swing/JFrame.java
	(setDefaultLookAndFeelDecorated): Likewise.
	* javax/swing/JInternalFrame.java
	(setDefaultCloseOperation): Fixed throwing exception on wrong argument
	value.
	* javax/swing/JWindow.java
	(HIDE_ON_CLOSE): Removed.
	(EXIT_ON_CLOSE): Likewise.
	(DISPOSE_ON_CLOSE): Likewise.
	(DO_NOTHING_ON_CLOSE): Likewise.
	(close_action): Likewise.
	(processKeyEvent): Likewise.
	(setDefaultCloseOperation): Likewise.
	(getPreferredSize): Simplified.

2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Disable gjdoc by default because it needs 
	external ANTLR.

	* configure: Regenerated.

2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* m4/ac_prog_javac.m4,
	m4/ac_prog_javac_works.m4:
	Added missing m4 macros.

	Reported by:  Davanum Srinivas  <davanum@gmail.com>

	* THIRDPARTY: Added notes for new macros.

	* aclocal.m4,
	configure,
	config/Makefile.in,
	include/Makefile.in,
	kaffe/Makefile.in,
	kaffe/jvmpi/Makefile.in,
	kaffe/kaffe/Makefile.in,
	kaffe/kaffeh/Makefile.in,
	kaffe/kaffevm/Makefile.in,
	kaffe/kaffevm/boehm-gc/Makefile.in,